// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`distinct connections mode > should stream query operations to connected event stream and then disconnect 1`] = `
":

"
`;

exports[`distinct connections mode > should stream query operations to connected event stream and then disconnect 2`] = `
"event: next
data: {"data":{"getValue":"value"}}

"
`;

exports[`distinct connections mode > should stream query operations to connected event stream and then disconnect 3`] = `
"event: complete
data:

"
`;

exports[`distinct connections mode > should stream query operations to connected event stream and then disconnect 4`] = `
":

"
`;

exports[`distinct connections mode > should stream query operations to connected event stream and then disconnect 5`] = `
"event: next
data: {"data":{"getValue":"value"}}

"
`;

exports[`distinct connections mode > should stream query operations to connected event stream and then disconnect 6`] = `
"event: complete
data:

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 1`] = `
":

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 2`] = `
"event: next
data: {"data":{"greetings":"Hi"}}

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 3`] = `
"event: next
data: {"data":{"greetings":"Bonjour"}}

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 4`] = `
"event: next
data: {"data":{"greetings":"Hola"}}

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 5`] = `
"event: next
data: {"data":{"greetings":"Ciao"}}

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 6`] = `
"event: next
data: {"data":{"greetings":"Zdravo"}}

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 7`] = `
"event: complete
data:

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 8`] = `
":

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 9`] = `
"event: next
data: {"data":{"greetings":"Hi"}}

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 10`] = `
"event: next
data: {"data":{"greetings":"Bonjour"}}

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 11`] = `
"event: next
data: {"data":{"greetings":"Hola"}}

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 12`] = `
"event: next
data: {"data":{"greetings":"Ciao"}}

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 13`] = `
"event: next
data: {"data":{"greetings":"Zdravo"}}

"
`;

exports[`distinct connections mode > should stream subscription operations to connected event stream and then disconnect 14`] = `
"event: complete
data:

"
`;

exports[`single connection mode > should stream subscription operations to connected event stream 2`] = `
"event: next
data: {"id":"1","payload":{"data":{"greetings":"Hi"}}}

"
`;

exports[`single connection mode > should stream subscription operations to connected event stream 3`] = `
"event: next
data: {"id":"1","payload":{"data":{"greetings":"Bonjour"}}}

"
`;

exports[`single connection mode > should stream subscription operations to connected event stream 4`] = `
"event: next
data: {"id":"1","payload":{"data":{"greetings":"Hola"}}}

"
`;

exports[`single connection mode > should stream subscription operations to connected event stream 5`] = `
"event: next
data: {"id":"1","payload":{"data":{"greetings":"Ciao"}}}

"
`;

exports[`single connection mode > should stream subscription operations to connected event stream 6`] = `
"event: next
data: {"id":"1","payload":{"data":{"greetings":"Zdravo"}}}

"
`;

exports[`single connection mode > should stream subscription operations to connected event stream 7`] = `
"event: complete
data: {"id":"1"}

"
`;
